@@ -188,21 +188,22 @@ public abstract class BasicVertex<I extends WritableComparable,
         return halt;
     }
 
-     /**
-      *  Get the list of incoming messages from the previous superstep.  Same as
-      *  the message iterator passed to compute().
-      */
+    /**
+     *  Get the list of incoming messages from the previous superstep.  Same as
+     *  the message iterator passed to compute().
+     */
     public abstract Iterable<M> getMessages();
 
     /**
-     * Set the messages this vertex should process in the current superstep
+     * Copy the messages this vertex should process in the current superstep
      *
      * @param messages the messages sent to this vertex in the previous superstep
      */
-    abstract void setMessages(Iterable<M> messages);
+    abstract void putMessages(Iterable<M> messages);
 
     /**
-     * Release unnecessary resources (will be called after vertex chose to halt)
+     * Release unnecessary resources (will be called after vertex returns from
+     * {@link #compute()})
      */
     abstract void releaseResources();
 
